<package format="3">
  <name>motion_sdk</name>
  <version>0.1.0</version>
  <description>Minimal USB CDC motion SDK</description>

  <maintainer email="you@todo.todo">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
